@@ -1,44 +1,5 @@
 $(function(){
 
-	// Check email function
-  function emailFn() {
-
-		this.email = '';
-		this.status = false;
-
-		this.check = function() {
-			var val = $("#id_email").val();
-			if (val.length == 0) return;
-			var msgbox = $("#emailmsg");
-
-      if (this.email != val) {
-        msgbox.html('<img src="/site_media/images/loading.gif" />');
-        msgbox.show();
-        setTimeout(function() { checkemail(val) }, 500);
-				this.email = val;
-      }
-		}
-
-		function checkemail(val) {
-			if (!/^[\w-\.]+@([\w-]+\.)+[\w-]{2,4}$/i.test(val)) {
-				$("#emailmsg").text("Invalid e-mail");
-			} else {
-   			$.get("/accounts/check_email/" + val + "/", function(data) {
-     			data = $.parseJSON(data);
-					if (!data['success']) {
-						$("#emailmsg").css("color", "red");
-						$("#emailmsg").text(data["error_message"]);
-					} else {
-						$("#emailmsg").css("color", "green");
-						$("#emailmsg").text("Ok");
-						this.status = true;
-					}
-				});
-			}
-
-		}
-  };
-
 	// Check user function
   function userFn() {
 
@@ -107,10 +68,8 @@ $(function(){
 		$(this).css("background", "#E6E6E6");
   });  
 
-	var email = new emailFn();
 	var user = new userFn();
 	var pass = new passwordFn();
-	$("#id_email").blur(email.check);
 	$("#id_username").blur(user.check);
 	$("#id_password1").blur(pass.check);
 	$("#id_password2").blur(pass.check);
