@@ -1,1 +1,0 @@
-Successfully registered on {{ site }}
